--- a/.pylintrc
+++ b/.pylintrc
@@ -5,7 +5,7 @@
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-#init-hook=
+init-hook='import sys; sys.path.append("/Users/tommao/.virtualenvs/codingcat")'
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
@@ -60,7 +60,7 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=using-cmp-argument,basestring-builtin,cmp-method,long-builtin,execfile-builtin,file-builtin,reload-builtin,delslice-method,import-star-module-level,zip-builtin-not-iterating,setslice-method,backtick,apply-builtin,dict-view-method,old-octal-literal,metaclass-assignment,old-ne-operator,buffer-builtin,useless-suppression,next-method-called,filter-builtin-not-iterating,indexing-exception,print-statement,unichr-builtin,suppressed-message,raw_input-builtin,unicode-builtin,no-absolute-import,xrange-builtin,dict-iter-method,round-builtin,old-division,unpacking-in-except,nonzero-method,oct-method,map-builtin-not-iterating,coerce-builtin,standarderror-builtin,intern-builtin,range-builtin-not-iterating,old-raise-syntax,getslice-method,reduce-builtin,input-builtin,hex-method,cmp-builtin,long-suffix,coerce-method,raising-string,parameter-unpacking,missing-docstring
+disable=no-self-use,using-cmp-argument,basestring-builtin,cmp-method,long-builtin,execfile-builtin,file-builtin,reload-builtin,delslice-method,import-star-module-level,zip-builtin-not-iterating,setslice-method,backtick,apply-builtin,dict-view-method,old-octal-literal,metaclass-assignment,old-ne-operator,buffer-builtin,useless-suppression,next-method-called,filter-builtin-not-iterating,indexing-exception,print-statement,unichr-builtin,suppressed-message,raw_input-builtin,unicode-builtin,no-absolute-import,xrange-builtin,dict-iter-method,round-builtin,old-division,unpacking-in-except,nonzero-method,oct-method,map-builtin-not-iterating,coerce-builtin,standarderror-builtin,intern-builtin,range-builtin-not-iterating,old-raise-syntax,getslice-method,reduce-builtin,input-builtin,hex-method,cmp-builtin,long-suffix,coerce-method,raising-string,parameter-unpacking,missing-docstring
 
 
 [REPORTS]
@@ -225,7 +225,7 @@ logging-modules=logging
 [MISCELLANEOUS]
 
 # List of note tags to take in consideration, separated by a comma.
-notes=FIXME,XXX,TODO
+notes=FIXME,XXX
 
 
 [SIMILARITIES]
@@ -243,7 +243,7 @@ ignore-docstrings=yes
 ignore-class=responses
 
 # Ignore imports when computing similarities.
-ignore-imports=no
+ignore-imports=yes
 
 
 [SPELLING]
