--- a/.pylintrc
+++ b/.pylintrc
@@ -5,7 +5,7 @@
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-init-hook='import sys; sys.path.append("/Users/tommao/.virtualenvs/codingcat")'
+init-hook='import sys; sys.path.append("/Users/tommao/.virtualenvs/codingcat/lib/python3.5/site-packages")'
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
