--- a/.editorconfig
+++ b/.editorconfig
@@ -20,6 +20,13 @@ insert_final_newline = true
 indent_style = space
 indent_size = 4
 
+[*.css]
+indent_style = space
+indent_size = 4
+
+[*.json]
+indent_style = space
+indent_size = 4
 
 [*.yaml]
 indent_style = space
