--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ __pycache__/
 env/
 build/
 develop-eggs/
-dist/
+web/dist/src
 downloads/
 eggs/
 .eggs/
@@ -51,7 +51,7 @@ coverage.xml
 *.mo
 *.pot
 
-# Django stuff:
+# Server stuff:
 *.log
 local_settings.py
 
