--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@
         exclude:  \/migrations\/
     -   id: check-docstring-first
     -   id: check-json
-    # -   id: check-added-large-files
+    -   id: check-added-large-files
     -   id: check-yaml
     -   id: debug-statements
     -   id: requirements-txt-fixer
